# pantopoda

./: Cargo.toml  README.md
migrations/2020-03-24-103601_entities/: down.sql  up.sql
src/: main.rs
src/dao/: mod.rs  schema.rs
src/dao/entities/: admin.rs  mod.rs  post.rs  subsection.rs  thread.rs
src/utils/: processor.rs
static/: main.js  yotsuba.css
templates/: index.html  res.html  test.html
