[package]
name = "pantopoda"
version = "0.1.0"
authors = ["naraku_gleeman <abysslancer@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = { version = "2.0" }
# openssl = { version = "0.10", features = ["vendored"] }
actix-rt = "1.0"
actix-files = "0.2.1"
actix-multipart = "0.2.0"

askama = "0.9.0"

chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15.0"

r2d2 = "0.8.8"

serde_derive="1.0.105"
serde_json="1.0"
env_logger = "0.7.1"

rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
serde-value = "0.6.0"

uuid = { version = "0.8.1", features = ["serde", "v4"] }

futures = "0.3.4"



[build-dependencies]
askama = "0.9.0"

